# python-project-template

./: README.md  cookiecutter.json
.devcontainer/: Dockerfile  devcontainer.json
{{cookiecutter.project_name}}/: README.md  mkdocs.yml  pyproject.toml
{{cookiecutter.project_name}}/.devcontainer/: Dockerfile
{{cookiecutter.project_name}}/docs/: index.md
{{cookiecutter.project_slug}}/: README.md  mkdocs.yml  pyproject.toml
{{cookiecutter.project_slug}}/.devcontainer/: Dockerfile  devcontainer.json
{{cookiecutter.project_slug}}/docs/: index.md
{{cookiecutter.project_slug}}/tests/: __init__.py  test_{{cookiecutter.pkg_name}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.pkg_name}}/: __init__.py
